Update 'uh62fpr95-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:871badf2d03460e7fc25b2500bbb201f79ea8aad@sha256:fe2371f7240f4dc095149747c9fdd6b621252187e1adb87e3971d15fe284f135

--- a/components/uh62fpr95-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/uh62fpr95-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: uh62fpr95-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:871badf2d03460e7fc25b2500bbb201f79ea8aad@sha256:fe2371f7240f4dc095149747c9fdd6b621252187e1adb87e3971d15fe284f135
+          name: container-image
